--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
-body {
+body, #root {
   padding: 0;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: start;
   margin: 0 auto;
-}
-
-#root {
-  text-align: center;
 }
 
 #FyiBanner {
